# nrf-kbd

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app.overlay  prj.conf
boards/micropro/pmicro/: Kconfig.defconfig  Kconfig.pmicro  board.c  board.cmake  board.yml  pmicro.dts  pmicro.yaml  pmicro_defconfig
src/: bt.c  bt.h  main.c
sysbuild/: mcuboot.conf  mcuboot.overlay
